@@ -1,3 +1,10 @@
+TAG: qcreports_db-6-0-25-??
+DATE: 06/02/2025
+STAFF: lec
+wts2-1673/how many alleles sold by Jax are used to annotated GXDHT_Samples?
+        new file:   GXD_HTSampleJAX.py
+        modified:   pwireports.txt
+
 TAG: qcreports_db-6-0-25-22
 DATE: 05/29/2025
 STAFF: lec
